[package]
name = "nymstr-groupd"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tokio-stream = "0.1"
fern = { version = "0.6", features = ["colored"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono"] }
nym-sdk = { git = "https://github.com/nymtech/nym", branch = "master" }
uuid = { version = "1", features = ["v4"] }
sequoia-openpgp = "2"
redis = { version = "0.21", features = ["aio", "tokio-comp"] }

[dev-dependencies]
tempfile = "3"